--- a/Templates/weather_results.html
+++ b/Templates/weather_results.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel='stylesheet' href="https://bootswatch.com/4/minty/bootstrap.min.css">
   <title>Results</title>
 </head>
+<style>
+  body {
+    color:PaleVioletRed;
+  }
+</style>
 <body>
-<p>Currently, in {{city}}, it is {{temp}}.</p>
+<br>
+<center>
+  <h1>What's the Weather Look Like Today?</h1>
+  <br>
+<h3>Currently, in {{city}}, it is {{temp}} farenheit.</h3>
+</center>
 </body>
 </html>
